--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,6 +6,11 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Maps/BunnyTutorialMap.BunnyTutorialMap
+GameDefaultMap=/Game/Maps/BunnyTutorialMap.BunnyTutorialMap
+GlobalDefaultGameMode=/Script/Bunny.BunnyGameModeBase
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -47,7 +52,4 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/BunnyTutorialMap.BunnyTutorialMap
-GameDefaultMap=/Game/Maps/BunnyTutorialMap.BunnyTutorialMap
 
