--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -39,12 +39,15 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 bDefaultViewportMouseLock=False
 DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Jump",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+AxisMappings=(AxisName="MoveX",Key=W,Scale=1.000000)
-+AxisMappings=(AxisName="MoveX",Key=S,Scale=-1.000000)
-+AxisMappings=(AxisName="RotateZ",Key=E,Scale=1.000000)
-+AxisMappings=(AxisName="RotateZ",Key=Q,Scale=-1.000000)
-+AxisMappings=(AxisName="MoveY",Key=D,Scale=1.000000)
-+AxisMappings=(AxisName="MoveY",Key=A,Scale=-1.000000)
++ActionMappings=(ActionName="Interact",Key=F,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Climb",Key=C,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Glide",Key=LeftControl,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Glide",Key=RightControl,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Scare",Key=V,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
++AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
++AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
++AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
