--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,6 +10,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 EditorStartupMap=/Game/Maps/BunnyTutorialMap.BunnyTutorialMap
 GameDefaultMap=/Game/Maps/BunnyTutorialMap.BunnyTutorialMap
 GlobalDefaultGameMode=/Script/Bunny.BunnyGameModeBase
+GameInstanceClass=/Script/Bunny.BunnyGameInstance
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
@@ -113,5 +114,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
