Added a MainMenu level, implemented basic menu functionality
Added a hideous main menu level with buttons to quit the game, start a new game (from level 1) and to skip directly to Level 2 or try the Demo map.

The main menu is accessible from in game if run as standalone by pressing escape, otherwise the game should also begin at main menu, though Play-in-Editor will always just play the map you are editing, naturally.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/BunnyTutorialMap.BunnyTutorialMap
-GameDefaultMap=/Game/Maps/BunnyTutorialMap.BunnyTutorialMap
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 GlobalDefaultGameMode=/Script/Bunny.BunnyGameModeBase
 GameInstanceClass=/Script/Bunny.BunnyGameInstance
 
