--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -45,6 +45,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Glide",Key=RightShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Scare",Key=LeftControl,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Scare",Key=RightControl,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Menu",Key=Escape,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
