--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -74,6 +74,10 @@ GameInstanceClass=/Script/Bunny.BunnyGameInstance
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/Engine.RecastNavMesh]
+AgentRadius=16.000000
+CellSize=8.000000
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -114,4 +118,5 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
 
