set MainMenu to be default loaded level

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -7,7 +7,7 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/BunnyTutorialMap.BunnyTutorialMap
+EditorStartupMap=/Game/Maps/MainMenu.MainMenu
 GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 GlobalDefaultGameMode=/Script/Bunny.BunnyGameModeBase
 GameInstanceClass=/Script/Bunny.BunnyGameInstance
