added TitleScreen with video

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -7,8 +7,8 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/MainMenu.MainMenu
-GameDefaultMap=/Game/Maps/MainMenu.MainMenu
+EditorStartupMap=/Game/Maps/TitleScreen.TitleScreen
+GameDefaultMap=/Game/Maps/TitleScreen.TitleScreen
 GlobalDefaultGameMode=/Script/Bunny.BunnyGameModeBase
 GameInstanceClass=/Script/Bunny.BunnyGameInstance
 
@@ -118,5 +118,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-
