Disabled Error Visualizing and rebuilt
Rebuilt levels after disablign error visualizing. as this was causing artefacts in the game on select assets with ovarlapping UVs when the lighting was built.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,2 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=00058621430B0599D52BD087D4666346
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+FullRebuild=True
+
